增加百度统计

--- a/default.hbs
+++ b/default.hbs
@@ -46,6 +46,10 @@
 <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 <script src="{{asset "/js/plugins/jquery.fitvids.js"}}"></script>
 <script src="{{asset "/js/script.js"}}"></script>
+<script type="text/javascript">
+    var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+    document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F103140399d1bdebf906f02cca1e3e79d' type='text/javascript'%3E%3C/script%3E"));
+</script>
 
 </body>
 </html>
